tests/neg-macros/i6436.check
-- Error: tests/neg-macros/i6436.scala:5:9 -----------------------------------------------------------------------------
5 |    case '{ StringContext(${Varargs(parts)}*) } => // error
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         no implicit argument of type scala.quoted.Quotes was found
